# gitfluence

./: .bumpversion.cfg  .bumpversion.toml  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml  setenv.example.ps1  setenv.example.sh
.github/workflows/: ci.yml  codeql.yml  deploy-prod.yml  deploy-test.yml  release.yml  reusable-sync.yml  sync2cf.yml
docs/: releasing.md
gitfluence/: __init__.py  __main__.py  config.py  confluence.py  git_info.py  postface.md.template  postface.py  preface.md  preface.md.template  template.py
scripts/: prepare-release.sh  revert_changelog_rc.py  test_release_lifecycle.py
sync2cf/: __main__.py  config.py  confluence.py  git_info.py  postface.py
tests/: conftest.py  mock_confluence.py  test_cli.py  test_config.py  test_confluence.py  test_git_info.py  test_integration.py  test_postface.py  test_template.py
