[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "sync2cf"
version = "0.1.0"
description = "Sync markdown files from a git repo to Confluence as a page hierarchy"
requires-python = ">=3.12"
dependencies = [
    "md2cf @ git+https://github.com/geopanther/md2cf.git@pre-integration",
    "gitpython>=3.1.46",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "atlassian-python-api>=4.0",
    "pre-commit>=4.0",
    "black>=24.0",
    "isort>=5.13",
    "pylint>=3.3",
]

[project.scripts]
sync2cf = "sync2cf.__main__:main"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: tests that require a live Confluence instance (deselected by default)",
]
