[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitfluence"
version = "0.1.0"
description = "Sync markdown files from a git repo to Confluence as a page hierarchy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "geopanther", email = "geopanther@mail.de" },
]
keywords = ["markdown", "confluence", "git", "sync"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "mdfluence>=0.2.1",
    "gitpython>=3.1.46",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/geopanther/gitfluence"
Repository = "https://github.com/geopanther/gitfluence"
Changelog = "https://github.com/geopanther/gitfluence/blob/main/CHANGELOG.md"

[project.scripts]
gitfluence = "gitfluence.__main__:main"

[tool.setuptools]
packages = ["gitfluence"]

[project.optional-dependencies]
dev = [
    "bump2version",
    "build",
    "pre-commit",
    "tox",
]
test = [
    "pytest>=8.0",
    "pytest-mock",
    "pyfakefs",
    "requests-mock",
]

[tool.tox]
envlist = ["py312", "py313"]

[tool.tox.env_run_base]
deps = [
    "pytest",
    "pytest-mock",
    "pyfakefs",
    "requests-mock",
    "pylint",
]
set_env = {CONFLUENCE_PROD_HOST = "https://dummy.example.com/api"}
commands = [
    ["pylint", "--rcfile=.pylintrc", "gitfluence"],
    ["pytest"],
    ["gitfluence", "--dry-run", "."],
]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
