[project]
name = "gitfluence"
version = "0.1.0"
description = "Sync markdown files from a git repo to Confluence as a page hierarchy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "geopanther", email = "geopanther@mail.de" },
]
keywords = ["markdown", "confluence", "git", "sync", "md2cf", "mdfluence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "mdfluence>=0.2.1",
    "gitpython>=3.1.46",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "identify>=2.6.19",
]

[project.urls]
Homepage = "https://github.com/geopanther/gitfluence"
Repository = "https://github.com/geopanther/gitfluence"
Changelog = "https://github.com/geopanther/gitfluence/blob/main/CHANGELOG.md"

[project.scripts]
gitfluence = "gitfluence.__main__:main"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "identify>=2.6.19",
    "pre-commit",
    "ruff",
    "ty",
]
test = [
    "pytest>=8.0",
    "pytest-mock",
    "pyfakefs",
    "requests-mock",
    "tox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tox]
envlist = ["py312", "py313"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [
    ["pytest"],
    ["gitfluence", "--dry-run", "."],
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
